objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__ServicePointId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Service Point associated with this Quote line item.</description>
        <label>Service Point</label>
        <referenceTo>vlocity_cmt__ServicePoint__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>QuoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceLineNumber__c</fullName>
        <description>For Quote Line Items in a temporary cart, this field indicates the Line Number of this line item in the source Quote. For example, this is used for line items in a Working Cart to identify the same line item in the source Enterprise Quote.</description>
        <label>Source Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubAction__c</fullName>
        <description>The sub-action requested for this line item typically used for moves of service from one location to another with values of Move-Add and Move-Delete. Move-Add means this item is being added as part of the move and usually should be added before the previous service is disconnected. Move-Delete means this item is the service to be disconnected after the service is activated at the new location.</description>
        <label>Sub Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Move</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Replace</fullName>
                </value>
                <value>
                    <fullName>Reassign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubscriptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription that this item describes.</description>
        <label>Subscription</label>
        <referenceTo>vlocity_cmt__Subscription__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>QuoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageCostTotal__c</fullName>
        <description>Usage Cost Total</description>
        <label>Usage Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageMargin__c</fullName>
        <description>Usage Margin</description>
        <label>Usage Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageMeasurementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This reference to Charge Measurement for usage pricing.</description>
        <label>Usage Unit of Measure</label>
        <referenceTo>vlocity_cmt__ChargeMeasurement__c</referenceTo>
        <relationshipLabel>Quote Products</relationshipLabel>
        <relationshipName>QuoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsagePriceTotal__c</fullName>
        <description>Usage Price Total</description>
        <label>Usage Price Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageQuantity__c</fullName>
        <description>Usage Quantity</description>
        <label>Usage Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageUnitCost__c</fullName>
        <description>Usage Cost</description>
        <label>Usage Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageUnitPrice__c</fullName>
        <description>Usage Price</description>
        <label>Usage Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationDate__c</fullName>
        <description>Time when this line item was last validated</description>
        <label>Validation Date</label>
        <type>DateTime</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SOHO_Discount_Threshold_Check</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__OneTimeManualDiscount__c &gt; PricebookEntry.SOHO_One_Time_Discount__c</errorConditionFormula>
        <errorMessage>You are giving too much discount.</errorMessage>
    </validationRules>
</CustomObject>